StateReader test